--- a/www/css/style.css
+++ b/www/css/style.css
@@ -7,3 +7,18 @@
     left: 0;
     top: 0;
 }
+
+.bar-positive {
+}
+
+.angular-google-map {
+  
+  width:100%;
+  height:100%; 
+}
+
+.angular-google-map-container {
+  
+  width:100%;
+  height:100%; 
+}
