--- a/www/templates/map-view.html
+++ b/www/templates/map-view.html
@@ -4,7 +4,18 @@
       <i class="ion-gear-b"></i>
     </button>
   </ion-nav-buttons>
-  <ion-content>
-  	<div id="map"></div>
+  <ion-content scroll="false">
+	 <ui-gmap-google-map center="map.center" draggable="true" zoom="map.zoom" options="map.options" events="map.events"> 
+                <ui-gmap-markers models="map.markers"  
+                doCluster="true"  
+                coords="'self'"  
+                icon="'icon'"  
+                click="'onclicked'" 
+                options="'options'" 
+                idkey='id' 
+                clusterOptions='map.clusterOptions'
+                control='markerControl.getChildMarkers().get(id)'>     
+                </ui-gmap-markers>
+            </ui-gmap-google-map> 
   </ion-content>
 </ion-view>
