Changed tabs to all point to map

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,13 +6,13 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-positive">
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Parking" icon-off="ion-model-s" icon-on="ion-model-s" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+  <ion-tab title="Parking" icon-off="ion-model-s" icon-on="ion-model-s" href="#/tab/map">
+    <ion-nav-view name="tab-map"></ion-nav-view>
   </ion-tab>
 
   <!-- Chats Tab -->
-  <ion-tab title="Bus" icon-off="ion-android-bus" icon-on="ion-android-bus" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
+  <ion-tab title="Bus" icon-off="ion-android-bus" icon-on="ion-android-bus" href="#/tab/map">
+    <ion-nav-view name="tab-map"></ion-nav-view>
   </ion-tab>
 
   <!-- Account Tab -->
@@ -21,13 +21,13 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Account Tab -->
-  <ion-tab title="Bike" icon-off="ion-android-bicycle" icon-on="ion-android-bicycle" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
+  <ion-tab title="Bike" icon-off="ion-android-bicycle" icon-on="ion-android-bicycle" href="#/tab/map">
+    <ion-nav-view name="tab-map"></ion-nav-view>
   </ion-tab>
 
   <!-- Account Tab -->
-  <ion-tab title="Favorite" icon-off="ion-heart" icon-on="ion-heart" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
+  <ion-tab title="Favorite" icon-off="ion-heart" icon-on="ion-heart" href="#/tab/map">
+    <ion-nav-view name="tab-map"></ion-nav-view>
   </ion-tab>
 
 
