--- a/www/css/style.css
+++ b/www/css/style.css
@@ -22,3 +22,13 @@
   width:100%;
   height:100%; 
 }
+
+.circle {
+	border-radius: 50%;
+	height: 150px;
+	width: 150px;
+}
+
+.profile-box {
+	text-align: center;
+}
