--- a/www/templates/map-view.html
+++ b/www/templates/map-view.html
@@ -14,8 +14,7 @@
 			</info-window>
 		</map>
 
-		<ion-tabs class="tabs-icon-top tabs-positive">
-
+		<ion-tabs class="tabs-icon-top ts-positive">
 		  <ion-tab title="Parking" icon-off="ion-model-s" icon-on="ion-model-s">
 		  </ion-tab>
 
@@ -23,7 +22,6 @@
 		  </ion-tab>
 
 		  <ion-tab title="Main" icon-off="ion-plus-round" icon-on="ion-plus-round">
-		    <ion-nav-view name="tab-map"></ion-nav-view>
 		  </ion-tab>
 
 		  <ion-tab title="Bike" icon-off="ion-android-bicycle" icon-on="ion-android-bicycle">
