--- a/www/templates/map-view.html
+++ b/www/templates/map-view.html
@@ -5,17 +5,14 @@
 	</ion-nav-buttons>
 	<ion-content scroll="false">
 		<map id="map" center="32.730346, -97.114586" zoom="17" disable-default-u-i="true" styles="
-		[{'featureType':'road.highway.controlled_access','elementType':'geometry.fill','stylers':[{'color':'#676d75'}]},{'featureType':'road.highway.controlled_access','elementType':'geometry.stroke','stylers':[{'visibility':'off'}]},{'featureType':'landscape.natural','elementType':'geometry.fill','stylers':[{'color':'#f8f8f8'}]},{'featureType':'landscape.man_made','elementType':'geometry.fill','stylers':[{'visibility':'on'},{'color':'#676D75'}]},{'featureType':'poi','elementType':'geometry.fill','stylers':[{'color':'#cfd5db'}]},{'featureType':'road.highway.controlled_access','elementType':'geometry.fill','stylers':[{'color':'#666666'}]},{'featureType':'road.highway.controlled_access','elementType':'geometry.stroke','stylers':[{'visibility':'off'}]},{'featureType':'road.local','elementType':'geometry.fill','stylers':[{'visibility':'on'},{'color':'#ffffff'}]},{'featureType':'road.local','elementType':'geometry.stroke','stylers':[{'visibility':'off'}]},{'featureType':'road.arterial','elementType':'geometry.stroke','stylers':[{'visibility':'on'}]},{'featureType':'road.highway','elementType':'geometry.fill','stylers':[{'color':'#676d75'}]},{'featureType':'road.highway','elementType':'geometry.stroke','stylers':[{'color':'#585d63'}]},{'featureType':'water','elementType':'geometry.fill','stylers':[{'color':'#43B7EA'}]}]
-		">
-			<info-window id="1" position="32.730346, -97.114586" visible="true">
-				<div ng-non-bindable="">
-					This is a test
-				</div>
-			</info-window>
+		{{ map.styles }}">
+
+			<marker ng-repeat="marker in markers" position="{{ marker.coords.lat }}, {{ marker.coords.lng }}" title="{{ marker.name }}" animation="DROP" />
 		</map>
 		
-		<div id="menu-popout" ng-show="true">
+		<div id="menu-popout" ng-class="{ active: mainSelected }">
 			<ul class="ghetto-tabs-list">
+				<li>This menu is shitty --</li>
 				<li><a href="/#/shame">Wall of shame</a></li>
 				<li><a ng-click="callDaPolice()">Panic Button</a></li>
 				<li><a href="/#/profile">Personalize</a></li>
