added popout-menu buttons, fixed floating ion-tab bar issue

--- a/www/templates/camera.html
+++ b/www/templates/camera.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Dashboard">
+<ion-view view-title="Create a Post">
   <ion-content class="padding">
     <div class="list card">
       <div class="item item-divider">Recent Updates</div>
@@ -24,5 +24,9 @@
         </div>
       </div>
     </div>
-  </ion-content>
+    <img ng-show="imgURI !== undefined" ng-src="{{imgURI}}">
+    <img ng-show="imgURI === undefined" ng-src="http://placehold.it/300x300">
+    <!-- this code was just a place holder for testing  <button class="button" ng-click="takePicture()">Take Picture</button>-->
+    <a href="#" class="myButton" ng-click="takePicture()">Camera</a>
+</ion-content>
 </ion-view>
