--- a/www/templates/shame-view.html
+++ b/www/templates/shame-view.html
@@ -1,11 +1,36 @@
 <ion-view view-title="Wall of Shame">
-	<ion-nav-buttons side="right">
-		<a class="button button-icon button-clear ion-camera" href="/#/camera">
-		</a>
-	</ion-nav-buttons>
-	<ion-content>
+<ion-nav-buttons side="right">
+<a class="button button-icon button-clear ion-camera" ng-click="goToPage('camera')">
+</a>
+</ion-nav-buttons>
+<ion-content>
 
-	Sum Content
-	</ion-content>
+<div ng-repeat="post in posts" class="list card">
+	<div class="item item-avatar" id="userAvatar">
+
+		<img ng-src="{{ post.user.image }}">
+
+		<h2 id="userName">{{post.user.name}}</h2>
+
+		<span id="userDate">
+			{{post.date}}
+		</span>
+	</div>
+	<div class="item item-body">
+		<img class="image image-center" id="failImage" ng-src="{{ post.image }}">
+		<p>
+			<a href="#" class="subdued">Likes: {{post.likes}}</a>
+		</p>
+	</div>
+
+	<div class="item tabs tabs-secondary tabs-icon-left">
+		<a class="tab-item" href="#">
+			<i class="icon ion-thumbsup" id="thumb"></i>
+			Like
+		</a>
+	</div>
+</div>
+
+</ion-content>
 </ion-view>
 
