--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,13 +1,13 @@
 /* Empty. Add your own CSS if you like */
 .ghettoassfab{
-  /*background: #ccc;*/
+  background: rgba(0,0,0,0.5);
   display: block;
-  text-align: right;
-
+  border-radius: 5px;
+  margin: 10px;
 }
 
-i.ghettoassfab.ion-android-locate {
-  font-size: 150px;
+.ghettoassfab i {
+  color: #fff;
 }
 
 
