--- a/www/templates/map-view.html
+++ b/www/templates/map-view.html
@@ -3,18 +3,18 @@
 		<a class="button button-icon button-clear ion-gear-b" ng-click="goToPage('profile')">
 		</a>
 	</ion-nav-buttons>
-	<ion-content scroll="false">
+	<ion-content scroll="false" class="ng-scope">
 		<map id="map" center="32.730346, -97.114586" zoom="17" disable-default-u-i="true" styles="
 		{{ map.styles }}">
+
+			<custom-control id="home" position="TOP_RIGHT" index="1" on-click="click()">
+	          <div class="ghettoassfab">
+				<i ng-click="centerOnMe()" center="current-location" class="button button-icon icon ion-android-locate"></i>
+			</div>
+	        </custom-control>
 			
 			<marker ng-repeat="marker in markers" position="{{ marker.coords.lat }}, {{ marker.coords.lng }}" title="{{ marker.name }}" animation="DROP" />
 		</map>	
-		<div class="ghettoassfab">
-
-			<!-- <a ng-click="centerOnMe()" class="button button-icon icon ion-android-locate"></a> -->
-			<i ng-click="centerOnMe()" class=" button button-icon icon ion-android-locate"></i>
-
-		</div>
 		 <div class="button-bar" id="menu-popout" ng-class="{ active: mainSelected }">
  			
  			<button id="first-button" ng-click="goToPage('shame')"><i class="icon ion-sad"><h5>Wall of Shame</h5></i></button>
