--- a/www/templates/shame-view.html
+++ b/www/templates/shame-view.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Wall of Shame">
 <ion-nav-buttons side="right">
-<a class="button button-icon button-clear ion-camera" ng-click="goToPage('camera')">
+<a class="button button-icon button-clear ion-camera" ui-sref="camera">
 </a>
 </ion-nav-buttons>
 <ion-content>
