--- a/www/templates/map-view.html
+++ b/www/templates/map-view.html
@@ -8,7 +8,7 @@
 		 <div class="button-bar" id="menu-popout" ng-class="{ active: mainSelected }">
  			
  			<button id="first-button" ui-sref="shame"><i class="icon ion-sad"><h5>Wall of Shame</h5></i></button>
-			<button id="middle-button"><i class="icon ion-ios-circle-filled"><h5>Panic Button</h5></i></button>
+			<button id="middle-button" on-tap="callDaPolice()"><i class="icon ion-ios-circle-filled"><h5>Panic Button</h5></i></button>
 			<button ui-sref="profile"><i class="icon ion-android-contact"><h5>Personalization</h5></i></button>
 		</div>
 
