--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -15,6 +15,9 @@ $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
 
+$positive: #51BFE7 !default;
+$positive-dark: #3BACD7 !default;
+
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
